--- a/android/tfmobile/build.gradle
+++ b/android/tfmobile/build.gradle
@@ -11,13 +11,8 @@
 // on Windows machines, but note that full equivalence with the Bazel
 // build is not yet guaranteed. See comments below for caveats and tips
 // for speeding up the build, such as as enabling ccache.
-
-
 project.buildDir = 'gradleBuild'
-getProject().setBuildDir('gradleBuild')
-
 project.ext.ASSET_DIR = projectDir.toString() + '/assets'
-
 assert file(project.ext.ASSET_DIR + "/graph.pb").exists()
 assert file(project.ext.ASSET_DIR + "/labels.txt").exists()
 
@@ -28,21 +23,18 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+
+
     }
 }
-
-
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion '27.0.3'
-
+    compileSdkVersion = 28
+    buildToolsVersion '28.0.3'
     lintOptions {
         abortOnError false
     }
-
     sourceSets {
         main {
             // Android demo app sources.
@@ -62,7 +54,8 @@ android {
             }
 
             dependencies {
-                compile 'org.tensorflow:tensorflow-android:+'
+                implementation 'org.tensorflow:tensorflow-android:+'
+
             }
 
         }
@@ -70,9 +63,19 @@ android {
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
+    defaultConfig {
+        minSdkVersion 21
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
+    compileSdkVersion 28
 }
-
-
 repositories {
     google()
+}
+dependencies {
+    implementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
